test/interaction/SplitOnHidden.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-status-action "")
(agda2-info-action "*All Goals*" "?0 : Nat " nil)
((last . 1) . (agda2-goals-action '(0)))
((last . 2) . (agda2-make-case-action '("test {N} {M} zero K = ?" "test {N} {M} (suc L) K = ?")))
((last . 1) . (agda2-goals-action '(0)))
(agda2-info-action "*Error*" "SplitOnHidden.agda:6.12-21: error: [Interaction.CaseSplitError] Unbound variable x when checking that the expression ? has type Nat" nil)
((last . 3) . (agda2-maybe-goto '("SplitOnHidden.agda" . 103)))
(agda2-highlight-load-and-delete-action)
(agda2-status-action "")
